Bug 148830 - Collapse button on docked Navigator pane looks thinner than the same button when Navigator pane is collapsed
Summary: Collapse button on docked Navigator pane looks thinner than the same button w...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-UI-UX Panel-Docking
  Show dependency treegraph
 
Reported: 2022-04-27 20:48 UTC by Roman Kuznetsov
Modified: 2024-08-20 07:38 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparize normal vs current views (1.28 KB, image/png)
2022-04-27 20:51 UTC, Roman Kuznetsov
Details
Screencast (361.63 KB, image/gif)
2023-01-10 18:34 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2022-04-27 20:48:32 UTC
Description:
Collapse button on docked Navigator pane looks thinner than the same button when Navigator pane is collapsed

Steps to Reproduce:
1. Open Writer
2. Press F5 => it opens Navigator
3. Dock Navigator to left side of LO's window
4. Look at Collapse button on right side of the Navigator, it's thinner than should be
5. Press the button and look at it now when Navigator pane is collapsed, it became thicker and now it looks as should be

Actual Results:
Collapse button on docked Navigator pane looks thinner than the same button when Navigator pane is collapsed

Expected Results:
Collapse button on docked Navigator pane looks as should be


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.4 (x64) / LibreOffice Community
Build ID: 9a9c6381e3f7a62afc1329bd359cc48accb6435b
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL
Comment 1 Roman Kuznetsov 2022-04-27 20:51:10 UTC
The button looks nice in 7.1.7.2 version => regression

I bisected it in win64-7.2 bisect repo and got the SHA

https://git.libreoffice.org/core/commit/3dfb8552eb84eaf831c4c3eb59c398afc87e9174

https://gerrit.libreoffice.org/c/core/+/112328

Add to CC: Caolán McNamara

ps: I'll add a screenshot with comparise views of the buttons
Comment 2 Roman Kuznetsov 2022-04-27 20:51:48 UTC
Created attachment 179814 [details]
Comparize normal vs current views
Comment 3 Buovjaga 2023-01-10 12:18:23 UTC Comment hidden (obsolete)
Comment 4 Roman Kuznetsov 2023-01-10 16:45:59 UTC
(In reply to Buovjaga from comment #3)
> (In reply to Roman Kuznetsov from comment #1)
> > The button looks nice in 7.1.7.2 version => regression
> > 
> > I bisected it in win64-7.2 bisect repo and got the SHA
> > 
> > https://git.libreoffice.org/core/commit/
> > 3dfb8552eb84eaf831c4c3eb59c398afc87e9174
> 
> I tried the bibisect repo and don't see the problem. Also not seen in
> 
> Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: ec2f1d73936c9d8cee83c0887170e9ecb8f044ba
> CPU threads: 2; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL:
> win
> Locale: en-US (en_FI); UI: en-US
> Calc: threaded

I still see the problem in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b4dc43b6d01d85802d5674c3a27789d6354e39a8
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded
Comment 5 Mike Kaganski 2023-01-10 18:34:59 UTC
Created attachment 184566 [details]
Screencast

Repro.
Comment 6 Buovjaga 2023-01-10 18:41:46 UTC
(In reply to Mike Kaganski from comment #5)
> Created attachment 184566 [details]
> Screencast
> 
> Repro.

I had a problem with reading comprehension and did not test with double navigators. I repro as well.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec2f1d73936c9d8cee83c0887170e9ecb8f044ba
CPU threads: 2; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_FI); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2024-08-20 07:35:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b6ff644abc32dd1d60bdf345dea803ca930a353f

Resolves: tdf#148830 ensure SplitWindow has enough space for splitter

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2024-08-20 07:38:27 UTC
that seems to do the right thing