Resolves: tdf#148830 ensure SplitWindow has enough space for splitter

Change-Id: Ib60b0e8acdffcda5b6835ff7207fffc4123d5c63
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172086
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>